--- a/css/style.css
+++ b/css/style.css
@@ -51,5 +51,56 @@ iframe {
 
 #icono {
     width: 40px
+}
 
+#iconoFacebook {
+    width: 40px;
+    margin-top: 20px;
+    float: left;
+    position: absolute;
+    right: 155px;
+}
+
+#iconoInstagram {
+    width: 40px;
+    margin-top: 20px;
+    float: left;
+    position: absolute;
+    right: 200px;
+}
+
+#logoGN {
+    width: 160px;
+    height: 90px;
+}
+
+#fotoPerfil {
+    margin-top: 30px;
+    margin-bottom: 9px;
+    margin-left: 40px;
+}
+
+#iconoArgPrograma {
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-bottom: 0px;
+    padding-top: 0px;
+    float: left;
+    
+}
+
+#login {
+    background-color: rgb(71, 48, 92);
+    color: cornsilk;
+    position: absolute;
+    right: 20px;
+    float: left;
+    width: 120px;
+    height: 30px;
+    margin-top: 20px;
+    border-radius: 15%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border: 5px solid rgb(102, 101, 101);
 }
