--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,11 @@ div#banner{
 img#img_banner{
     display: block;
     margin: auto;
-    width: 100%;
-    max-width: 1200px;
-    min-width: 500px;
+    width: 700px;
+    max-width: 1800px;
+    min-width: 1000px;
+    padding-top: 65px;
+    
 }
 
 body{
@@ -72,6 +74,8 @@ iframe {
 #logoGN {
     width: 160px;
     height: 90px;
+    float: left;
+    padding-top: 15px;
 }
 
 #fotoPerfil {
@@ -81,8 +85,9 @@ iframe {
 }
 
 #iconoArgPrograma {
-    margin-top: 10px;
-    margin-left: 20px;
+    width: 120px;
+    margin-top: 6px;
+    margin-left: 15px;
     margin-bottom: 0px;
     padding-top: 0px;
     float: left;
@@ -103,4 +108,68 @@ iframe {
     align-items: center;
     justify-content: center;
     border: 5px solid rgb(102, 101, 101);
+}
+
+header {
+    background: rgb(212, 215, 248);
+    width: 100%;
+    clear: both;
+    position: fixed;
+    display: table;
+}
+.barraHeader {
+    width: auto;
+    height: 70px;
+    background: rgb(58, 0, 58);
+    border-radius: 17px;
+}
+
+.centrados {
+    text-align: center;
+    margin: auto;
+}
+
+form {
+    width: 450px;
+    margin: auto;
+    margin-top: 20px;
+    background: rgba(0, 0, 0, 0.13);
+    padding: 20px 20px;
+    box-sizing: border-box; /*relleno del padding hacia adento*/
+    border-radius: 7px;
+    text-align: center;
+}
+
+form> h3 {
+    margin-bottom: 17px;
+    font-size: 30px;
+    font-family: monospace;
+}
+
+form> p{
+    margin-bottom: 17px;
+    font-size: 17px;
+}
+
+form>input, textarea {
+    width: 100%;
+    margin-bottom: 20px;
+    font-size: 17px;
+}
+
+form>textarea {
+    min-height: 100px;
+    max-height: 200px;
+    max-width: 100%;
+}
+
+#enviar {
+    background: #31184A;
+    color: beige;
+    padding: 20px;
+}
+
+#enviar:hover {
+    cursor: pointer;
+    color:gold;
 }
