--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0px;
     padding: 0px;
     font-family: Arial, Helvetica, sans-serif; /*tipografia*/
+    color: #dedfdd;
 }
 
 /*Define el tamaño del baner por medio de un id*/
@@ -22,9 +23,36 @@ img#img_banner{
     
 }
 
-body{
-    background: rgb(212, 215, 248);
+body {
     front-family: sans-serif;
+    background-color: rgba(0, 0, 0, 0.836);
+}
+
+.nav-bar{
+    background: #930;
+    padding: 20px;
+    display: block;
+    color: white;
+    cursor: pointer;
+    font-size: 1.5em;
+    width: 100%;
+    margin-top: 50px;
+}
+
+.menu {
+    list-style: none;
+    padding: 0px;
+    margin: 0px;
+    background:#206163;
+    width: 100%;
+}
+
+.menu__link {
+    display: block;
+    pad: 00px;
+    color: white;
+    font-size: 1.2em;
+    text-decoration: none;
 }
 
 .aviso {
@@ -57,18 +85,26 @@ iframe {
 
 #iconoFacebook {
     width: 40px;
-    margin-top: 20px;
+    margin-top: 15px;
     float: left;
     position: absolute;
     right: 155px;
 }
 
+#iconoFacebook:hover {
+    width: 45px;
+}
+
 #iconoInstagram {
     width: 40px;
-    margin-top: 20px;
+    margin-top: 15px;
     float: left;
     position: absolute;
     right: 200px;
+}
+
+#iconoInstagram:hover {
+    width: 45px;
 }
 
 #logoGN {
@@ -91,18 +127,21 @@ iframe {
     margin-bottom: 0px;
     padding-top: 0px;
     float: left;
-    
+}
+
+#iconoArgPrograma:hover {
+    width: 125px;
 }
 
 #login {
-    background-color: rgb(71, 48, 92);
+    background-color: rgb(58, 0, 58);
     color: cornsilk;
     position: absolute;
     right: 20px;
     float: left;
     width: 120px;
     height: 30px;
-    margin-top: 20px;
+    margin-top: 15px;
     border-radius: 15%;
     display: inline-flex;
     align-items: center;
@@ -110,8 +149,14 @@ iframe {
     border: 5px solid rgb(102, 101, 101);
 }
 
+#login:hover {
+    cursor: pointer;
+    color: gold;
+    background-color: #31184A;
+}
+
 header {
-    background: rgb(212, 215, 248);
+    background: rgb(0, 0, 0, 0.836);
     width: 100%;
     clear: both;
     position: fixed;
@@ -164,7 +209,7 @@ form>textarea {
 }
 
 #enviar {
-    background: #31184A;
+    background: rgb(58, 0, 58);
     color: beige;
     padding: 20px;
 }
@@ -172,4 +217,13 @@ form>textarea {
 #enviar:hover {
     cursor: pointer;
     color:gold;
+    background-color: #31184A;
+}
+
+#curso {
+    color: aliceblue;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: large; 
+    float: left;
+    margin-top: 20px;
 }
