--- a/css/style.css
+++ b/css/style.css
@@ -1,229 +1,203 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    font-family: Arial, Helvetica, sans-serif; /*tipografia*/
-    color: #dedfdd;
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: Arial, Helvetica, sans-serif; /*tipografia*/
+  color: #dedfdd;
 }
 
 /*Define el tamaño del baner por medio de un id*/
-div#banner{
-    width: 100%;
-    height: 400px;
-    background-color: #206163;
+div#banner {
+  width: 100%;
+  height: 400px;
+  background-color: #206163;
 }
 
 /*bloquea el banner en el centro, le da un max y min de zoom hasta 1200px (tamaño de la imagen*/
-img#img_banner{
-    display: block;
-    margin: auto;
-    width: 700px;
-    max-width: 1800px;
-    min-width: 1000px;
-    padding-top: 65px;
-    
+img#img_banner {
+  display: block;
+  margin: auto;
+  width: 700px;
+  max-width: 1800px;
+  min-width: 1000px;
+  padding-top: 65px;
 }
 
 body {
-    front-family: sans-serif;
-    background-color: rgba(0, 0, 0, 0.836);
-}
-
-.nav-bar{
-    background: #930;
-    padding: 20px;
-    display: block;
-    color: white;
-    cursor: pointer;
-    font-size: 1.5em;
-    width: 100%;
-    margin-top: 50px;
-}
-
-.menu {
-    list-style: none;
-    padding: 0px;
-    margin: 0px;
-    background:#206163;
-    width: 100%;
-}
-
-.menu__link {
-    display: block;
-    pad: 00px;
-    color: white;
-    font-size: 1.2em;
-    text-decoration: none;
+  front-family: sans-serif;
+  background-color: rgba(0, 0, 0, 0.836);
 }
 
 .aviso {
-    padding: 0.5em;
-    border: 1px solid #98be10;
-    background: #f6feda;
+  padding: 0.5em;
+  border: 1px solid #98be10;
+  background: #f6feda;
 }
 
 .error {
-    color: #930;
-    font-weight: bold;
+  color: #930;
+  font-weight: bold;
 }
 
-.sangria{
-    margin-left: 40px;
+.sangria {
+  margin-left: 40px;
 }
 
-.sangriaGrande{
-    margin-left: 100px;
+.sangriaGrande {
+  margin-left: 100px;
 }
 
 iframe {
-    width: 50%;
-    height: 30vh;
+  width: 50%;
+  height: 30vh;
 }
 
 #icono {
-    width: 40px
+  width: 40px;
 }
 
 #iconoFacebook {
-    width: 40px;
-    margin-top: 15px;
-    float: left;
-    position: absolute;
-    right: 155px;
+  width: 40px;
+  margin-top: 15px;
+  float: left;
+  position: absolute;
+  right: 155px;
 }
 
 #iconoFacebook:hover {
-    width: 45px;
+  width: 45px;
 }
 
 #iconoInstagram {
-    width: 40px;
-    margin-top: 15px;
-    float: left;
-    position: absolute;
-    right: 200px;
+  width: 40px;
+  margin-top: 15px;
+  float: left;
+  position: absolute;
+  right: 200px;
 }
 
 #iconoInstagram:hover {
-    width: 45px;
+  width: 45px;
 }
 
 #logoGN {
-    width: 160px;
-    height: 90px;
-    float: left;
-    padding-top: 15px;
+  width: 160px;
+  height: 90px;
+  float: left;
+  padding-top: 15px;
 }
 
 #fotoPerfil {
-    margin-top: 30px;
-    margin-bottom: 9px;
-    margin-left: 40px;
+  margin-top: 30px;
+  margin-bottom: 9px;
+  margin-left: 40px;
 }
 
 #iconoArgPrograma {
-    width: 120px;
-    margin-top: 6px;
-    margin-left: 15px;
-    margin-bottom: 0px;
-    padding-top: 0px;
-    float: left;
+  width: 120px;
+  margin-top: 6px;
+  margin-left: 15px;
+  margin-bottom: 0px;
+  padding-top: 0px;
+  float: left;
 }
 
 #iconoArgPrograma:hover {
-    width: 125px;
+  width: 125px;
 }
 
 #login {
-    background-color: rgb(58, 0, 58);
-    color: cornsilk;
-    position: absolute;
-    right: 20px;
-    float: left;
-    width: 120px;
-    height: 30px;
-    margin-top: 15px;
-    border-radius: 15%;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    border: 5px solid rgb(102, 101, 101);
+  background-color: rgb(58, 0, 58);
+  color: cornsilk;
+  position: absolute;
+  right: 20px;
+  width: 120px;
+  height: 30px;
+  margin-top: 15px;
+  border-radius: 15%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: 5px solid rgb(102, 101, 101);
 }
 
 #login:hover {
-    cursor: pointer;
-    color: gold;
-    background-color: #31184A;
+  cursor: pointer;
+  color: gold;
+  background-color: #31184a;
 }
 
 header {
-    background: rgb(0, 0, 0, 0.836);
-    width: 100%;
-    clear: both;
-    position: fixed;
-    display: table;
+  width: 100%;
+  clear: both;
+  position: fixed;
+  display: table;
 }
 .barraHeader {
-    width: auto;
-    height: 70px;
-    background: rgb(58, 0, 58);
-    border-radius: 17px;
+  width: auto;
+  height: 70px;
+  background: rgb(58, 0, 58);
+  border-radius: 17px;
 }
 
 .centrados {
-    text-align: center;
-    margin: auto;
+  text-align: center;
+  margin: auto;
 }
 
 form {
-    width: 450px;
-    margin: auto;
-    margin-top: 20px;
-    background: rgba(0, 0, 0, 0.13);
-    padding: 20px 20px;
-    box-sizing: border-box; /*relleno del padding hacia adento*/
-    border-radius: 7px;
-    text-align: center;
+  width: 450px;
+  margin: auto;
+  margin-top: 20px;
+  background: rgba(0, 0, 0, 0.13);
+  padding: 20px 20px;
+  box-sizing: border-box; /*relleno del padding hacia adento*/
+  border-radius: 7px;
+  text-align: center;
 }
 
-form> h3 {
-    margin-bottom: 17px;
-    font-size: 30px;
-    font-family: monospace;
+form > h3 {
+  margin-bottom: 17px;
+  font-size: 30px;
+  font-family: monospace;
 }
 
-form> p{
-    margin-bottom: 17px;
-    font-size: 17px;
+form > p {
+  margin-bottom: 17px;
+  font-size: 17px;
 }
 
-form>input, textarea {
-    width: 100%;
-    margin-bottom: 20px;
-    font-size: 17px;
+form > input,
+textarea {
+  width: 100%;
+  margin-bottom: 20px;
+  font-size: 17px;
 }
 
-form>textarea {
-    min-height: 100px;
-    max-height: 200px;
-    max-width: 100%;
+form > textarea {
+  min-height: 100px;
+  max-height: 200px;
+  max-width: 100%;
 }
 
 #enviar {
-    background: rgb(58, 0, 58);
-    color: beige;
-    padding: 20px;
+  background: rgb(58, 0, 58);
+  color: beige;
+  padding: 20px;
 }
 
 #enviar:hover {
-    cursor: pointer;
-    color:gold;
-    background-color: #31184A;
+  cursor: pointer;
+  color: gold;
+  background-color: #31184a;
 }
 
 #curso {
-    color: aliceblue;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: large; 
-    float: left;
-    margin-top: 20px;
+  color: aliceblue;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: large;
+  float: left;
+  margin-top: 20px;
+  margin-left: 150px;
+  position: absolute;
 }
