--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,29 @@
   margin: 0px;
   padding: 0px;
   font-family: Arial, Helvetica, sans-serif; /*tipografia*/
-  color: #dedfdd;
+  color: #d4d4d4;
 }
 
-/*Define el tamaño del baner por medio de un id*/
+body {
+  font-family: sans-serif;
+  background-color: rgba(0, 0, 0, 0.836);
+}
+
+header {
+  width: 100%;
+  clear: both;
+  position: fixed;
+  display: table;
+}
+
+.barraHeader {
+  width: auto;
+  height: 70px;
+  background: linear-gradient(rgba(5, 12, 7, 0.75), rgba(5, 12, 7, 0.75)), url(/img/banner2.jpg); 
+  /*imagen con transparencia*/
+  border-radius: 17px;
+}
+
 #iconoArgPrograma {
   width: 120px;
   margin-top: 6px;
@@ -19,9 +38,35 @@
   width: 125px;
 }
 
+.ico {
+  width: 40px;
+}
+
+#iconoFacebook {
+  margin-top: 15px;
+  float: left;
+  position: absolute;
+  right: 155px;
+}
+
+#iconoFacebook:hover {
+  width: 45px;
+}
+
+#iconoInstagram {
+  margin-top: 15px;
+  float: left;
+  position: absolute;
+  right: 200px;
+}
+
+#iconoInstagram:hover {
+  width: 45px;
+}
+
 #login {
-  background-color: rgb(58, 0, 58);
-  color: cornsilk;
+  background-color: rgba(58, 0, 58, 0);
+  color: rgb(126, 125, 125);
   position: absolute;
   right: 20px;
   width: 120px;
@@ -31,7 +76,6 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  border: 5px solid rgb(102, 101, 101);
 }
 
 #login:hover {
@@ -40,23 +84,7 @@
   background-color: #31184a;
 }
 
-header {
-  width: 100%;
-  clear: both;
-  position: fixed;
-  display: table;
-}
-
-.barraHeader {
-  width: auto;
-  height: 70px;
-  background: linear-gradient(rgba(5, 12, 7, 0.75), rgba(5, 12, 7, 0.75)),
-    url(/img/banner2.jpg);
-  /*imagen con transparencia*/
-  border-radius: 17px;
-}
-
-div#banner {
+#banner {
   width: 100%;
   height: 400px;
   background-color: #030303;
@@ -64,16 +92,63 @@ div#banner {
 
 /*bloquea el banner en el centro, le da un max y min de zoom hasta 1200px (tamaño de la imagen*/
 #banner {
-  background: linear-gradient(rgba(5, 12, 7, 0.75), rgba(5, 12, 7, 0.75)),
-    url(/img/banner2.jpg);
+  background: linear-gradient(rgba(5, 12, 7, 0.75), rgba(5, 12, 7, 0.75)), url(/img/banner2.jpg); 
   /*imagen con transparencia*/
   border-radius: 20px;
 }
 
-body {
-  font-family: sans-serif;
-  background-color: rgba(0, 0, 0, 0.836);
+.banner__fotoPerfil {
+  width: 250px;
+  margin-top: 250px;
 }
+
+.perfil {
+  margin-top: 100px;
+  padding-left: 40px;
+  padding-top: 20px;
+  float: left;
+}
+
+.perfil__h2{
+  font-size: 40px;
+  font-family: 'Dancing Script', cursive;
+  
+}
+
+.perfil__h4  {
+  font-size: 30px;
+  font-family: 'Dancing Script', cursive;
+
+}
+
+.perfil__addres {
+  font-size: 50px;
+}
+
+.acerca-de-mi {
+  margin-left: 500px;
+  width: 1500px;
+  padding: 20px 20px 20px 20px;
+  background-color: rgba(153, 51, 0, 0.205);
+  font-size: 20px;
+  
+}
+
+.acerca-de-mi__h3 {
+  font-family: 'Dancing Script', cursive;
+  font-size: 2em;
+  text-align: center;
+}
+
+.acerca-de-mi__p {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.3em;
+  font-style: italic;
+}
+.acerca-de-mi__p2 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 
 .aviso {
   padding: 0.5em;
@@ -86,10 +161,6 @@ body {
   font-weight: bold;
 }
 
-.sangria {
-  margin-left: 40px;
-}
-
 .sangriaGrande {
   margin-left: 100px;
 }
@@ -99,40 +170,6 @@ iframe {
   height: 30vh;
 }
 
-#icono {
-  width: 40px;
-}
-
-#iconoFacebook {
-  width: 40px;
-  margin-top: 15px;
-  float: left;
-  position: absolute;
-  right: 155px;
-}
-
-#iconoFacebook:hover {
-  width: 45px;
-}
-
-#iconoInstagram {
-  width: 40px;
-  margin-top: 15px;
-  float: left;
-  position: absolute;
-  right: 200px;
-}
-
-#iconoInstagram:hover {
-  width: 45px;
-}
-
-#logoGN {
-  width: 160px;
-  height: 90px;
-  float: left;
-  padding-top: 15px;
-}
 
 .tarjeta {
   width: 700px;
@@ -144,33 +181,43 @@ iframe {
   margin: auto;
 }
 
-.tarjetaPequeña {
-  width: 400px;
+.experiencia {
+  width: 450px;
   height: 200px;
   background: #930;
   margin-left: 100px;
-  padding-left: 50px;
-  padding-top: 50px;
-}
-
-#experiencia {
-  background: linear-gradient(rgba(5, 12, 7, 0.75), rgba(5, 12, 7, 0.75)),
-    url(/img/fondoGeometrico3.jpg);
+  padding-left: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background: linear-gradient(rgba(5, 12, 7, 0.75), rgba(5, 12, 7, 0.75)), url(/img/fondoGeometrico3.jpg); 
   /*imagen con transparencia*/
   border-radius: 20px;
+  font-size: 20px;
+}
+
+.experiencia__h3 {
+  font-family: 'Dancing Script', cursive;
+  font-size: 2em;
+  text-align: center;
+}
+
+#logoGN {
+  width: 160px;
+  height: 90px;
+  float: left;
+  padding-top: 15px;
+  margin-right: 50px;
+}
+
+.experiencia__section {
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 #estudios {
-  background: linear-gradient(rgba(5, 12, 7, 0.75), rgba(5, 12, 7, 0.75)),
-    url(/img/Biblioteca.jpg);
+  background: linear-gradient(rgba(5, 12, 7, 0.75), rgba(5, 12, 7, 0.75)), url(/img/Biblioteca.jpg); 
   border-radius: 20px;
 }
 
-#fotoPerfil {
-  margin-top: 30px;
-  margin-bottom: 19px;
-  margin-left: 40px;
-}
 
 .centrados {
   text-align: center;
@@ -234,3 +281,4 @@ form > textarea {
   margin-left: 150px;
   position: absolute;
 }
+
